# u-are-sus

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  utils.py
routes/: __init__.py  join.py
src/u_are_sus/utils/: digits.py  helpers.py
src/u_are_sus/utils/types/: forms.py
utils/: menus.py
utils/types/: headers.py
